@@ -1,3 +1,8 @@
+2005-11-12 Borut Razem <borut.razem AT siol.net>
+
+	* index.html: added description if Maarten Brock's contribution,
+	  added Raphael Neider to "who is SDCC" section
+
 2005-11-11 Borut Razem <borut.razem AT siol.net>
 
 	* links.html: fixed documentation requests:
